<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Library</string>
    <string name="app_label">Library</string>
    <string name="menu_set_library_path">Set BibTeX file path</string>
    <string name="menu_set_path_conversion">Setup path conversion</string>
    <string name="menu_search">Filter</string>
    <string name="search_hint">Filter the BibTeX library</string>
    <string name="menu_set_path_conversion_help">When opening local files associated with BibTeX entries, such as pdf or djvu files, the path specified in the \'file\' field of the BibTeX entries is modified as follows: The target string is replaced by the replacement string and the result is prepended with the prefix strig.</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="target">Target</string>
    <string name="replacement">Replacement</string>
    <string name="prefix">Prefix</string>
    <string name="file">file</string>
    <string name="url">url</string>
    <string name="doi">doi</string>
    <string name="share">Share...</string>
    <string name="no_application_to_view_files_of_type">No application available to view files of type</string>
    <string name="couldnt_find_file">Couldn\'t find file</string>
    <string name="path_conversion_hint">Maybe the path conversion is not set up correctly?</string>
    <string name="error_opening_webbrowser">Error opening webbrowser.</string>
    <string name="error_starting_share_intent">Error while sharing.</string>
    <string name="please_enter_path_of_bibtex_library">Please specify the path or uri of the BibTeX library file.</string>
    <string name="adapter_not_initialized">Adapter not initialized.</string>
    <string name="adapter_failed_to_intialized">The set BibTeX library file could not be read. Maybe the given path or uri is not correct or the SD card is not yet readable?</string>
    <string name="io_exception_while_reading">IO Exception while reading from</string>
    <string name="io_exception_while_closing">IO Exception while closing stream to</string>
    <string name="files">files</string>
    <string name="arxiv_url_prefix">http://arxiv.org/abs/</string>
    <string name="doi_url_prefix">http://dx.doi.org/</string>
    <string name="edited_by">ed. by</string>
    <string name="vol">vol.</string>
    <string name="num">num.</string>
    <string name="page">p.</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_none">Sort by order in library</string>
    <string name="menu_sort_by_date">Sort by date</string>
    <string name="menu_sort_by_author">Sort by author</string>
    <string name="menu_sort_by_journal">Sort by journal</string>
    <string name="menu_sort_by_title">Sort by title</string>
    <string name="no_matches">No matches</string>
    <string name="pick_bibtex_library">Pick BibTeX file</string>
    <string name="exception_while_loading_library">Exception while loading the BibTeX library file: </string>
    <string name="dialog_newpermissions_ok">Close</string>
    <string name="dialog_newpermissions_title">Restart required</string>
    <string name="dialog_newpermissions_message">Due to a bug in some versions of Android the app must be closed and restarted to actually obtain the permissions that were just granted.</string>
    <string name="dialog_set_library_root_title">Help Library find your files</string>
    <string name="dialog_set_library_root_message">The paths in externally created BibTeX usually contain paths to the associated files on the creating device. Library hence needs know where to look for the files on this device. Please select the root folder containing the files in your BibTeX library.\nExample:\nIf the paths in your BibTeX file look like this\n\n\t/home/user/my_pdfs/folder1/file1.pdf\n\t/home/user/my_pdfs/folder1/file2.pdf\n\t/home/user/my_pdfs/folder2/file3.pdf\n
      \t...\n\nand on your device they are in\n\n\t/sdcard/my_pdfs/folder1/file1.pdf\n\t/sdcard/my_pdfs/folder1/file2.pdf\n\t/sdcard/my_pdfs/folder2/file3.pdf\n\t...\n\nplease select /sdcard/my_pdfs/ in the following dialog.</string>
    <string name="dialog_set_library_root_message_addition_on_upgrade">Library now uses a new method to locate and open files!</string>
    <string name="dialog_set_library_root_select">Select</string>
    <string name="dialog_analyse_library_root_title">Please wait</string>
    <string name="dialog_analyse_library_root_title_failed">File not found</string>
    <string name="dialog_analyse_library_root_title_success">Success</string> 
    <string name="dialog_analyse_library_root_message">Trying to find the requested file in the directory you picked. This might take a while because Android\'s DocumentFile.findFile() can be very slow... This only needs to be done while opening the first file.</string>
    <string name="dialog_analyse_library_root_message_success" formatted="false">Library found the file %s in %s under the uri %s.</string>
    <string name="dialog_analyse_library_root_message_failed" formatted="false">Library failed to find the file %s inside the directory %s.</string>
    <string name="menu_groups">Groups</string>
</resources>
